--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <!--Styles.css-->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
     <header class="header">
         <nav class="main-nav">
             <a class="logo" href="./index.html">
-                WebStudio
+                Web<span class="studio">Studio</span>
             </a>
 
             <ul class="list">
-                <li class="list-item"><a class="link" href="">Студія</a></li>
-                <li class="list-item"><a class="link" href="">Портфоліо</a></li>
+                <li class="list-item"><a class="link current" href="./index.html">Студія</a></li>
+                <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="list-item"><a class="link" href="">Контакти</a></li>
             </ul>
         </nav>
@@ -28,15 +34,15 @@
 
     <main class="main">
 
-        <section class="section">
-            <div class="section-group">
-                <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+        <section class="hero">
+            <div class="hero-group">
+                <h1 class="hero-title">Ефективні рішення для <br/> вашого бізнесу</h1>
                 <button class="btn" type="button">Замовити послугу</button>
             </div>
         </section>
 
-        <section>
-            <h2 hidden class="section-title">Особливості</h2>
+        <section class="features">
+            <h2 hidden class="features-title">Особливості</h2>
             <ul class="list">
                 <li class="list-item">
                     <h3 class="item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -57,8 +63,8 @@
             </ul>
         </section>
 
-        <section class="section">
-            <h2 class="section-title">
+        <section class="work-process">
+            <h2 class="title">
                 Чим ми займаємося
             </h2>
             <ul class="list">
@@ -76,8 +82,8 @@
             </ul>
         </section>
         
-        <section class="section-4">
-            <h2 class="section-title">
+        <section class="team">
+            <h2 class="title">
                 Наша команда
             </h2>
             <ul class="list">
@@ -106,12 +112,12 @@
     </main>
 
     <footer class="footer">
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">Web<span class="f-studio">Studio</span></a>
         <address class="contacts-address">
             <ul class="list">
-                <li class="list-item"><a class="link" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li class="list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="list-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="list-item"><a class="link address" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="list-item"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="list-item"><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
