--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
             </h2>
             <ul class="list">
                 <li class="list-item">
-                    <img src="./images/img-1.jpg" alt="programer working his desk office" class="img" width="370" height="294">
+                    <img src="./images/studio/img-1.jpg" alt="programer working his desk office" class="img" width="370" height="294">
                 </li>
 
                 <li class="list-item">
-                    <img src="./images/img-2.jpg" alt="designers are developing application smartphones team creators is working interface mobile phones" class="img" width="370" height="294">
+                    <img src="./images/studio/img-2.jpg" alt="designers are developing application smartphones team creators is working interface mobile phones" class="img" width="370" height="294">
                 </li>
 
                 <li class="list-item">
-                    <img src="./images/img-3.jpg" alt="creative artist web design with working colour selection graphic tablet" class="img" width="370" height="294">
+                    <img src="./images/studio/img-3.jpg" alt="creative artist web design with working colour selection graphic tablet" class="img" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -88,22 +88,22 @@
             </h2>
             <ul class="list">
                 <li class="list-item">
-                    <img src="./images/img-4.jpg" alt="Product Designer" class="img" width="270" height="260">
+                    <img src="./images/studio/img-4.jpg" alt="Product Designer" class="img" width="270" height="260">
                     <h3 class="list-title">Ігор Дем'яненко</h3>
                     <p class="list-text">Product Designer</p>
                 </li>
                 <li class="list-item">
-                    <img src="./images/img-5.jpg" alt="Frontend Developer" class="img" width="270" height="260">
+                    <img src="./images/studio/img-5.jpg" alt="Frontend Developer" class="img" width="270" height="260">
                     <h3 class="list-title">Ольга Рєпіна</h3>
                     <p class="list-text">Frontend Developer</p>
                 </li>
                 <li class="list-item">
-                    <img src="./images/img-6.jpg" alt="Marketing" class="img" width="270" height="260">
+                    <img src="./images/studio/img-6.jpg" alt="Marketing" class="img" width="270" height="260">
                     <h3 class="list-title">Микола Тарасов</h3>
                     <p class="list-text">Marketing</p>
                 </li>
                 <li class="list-item">
-                    <img src="./images/img-7.jpg" alt="UI Designer" class="img" width="270" height="260">
+                    <img src="./images/studio/img-8.jpg" alt="UI Designer" class="img" width="270" height="260">
                     <h3 class="list-title">Михайло Єрмаков</h3>
                     <p class="list-text">UI Designer</p>
                 </li>
