--- a/portfolio.html
+++ b/portfolio.html
@@ -36,61 +36,61 @@
         </ul>
     </header>
 
-    <main>
-        <section>
+    <main class="main-p">
+        <section class="section-btn">
             <h2 hidden class="section-title">Розділи</h2>
-            <ul>
-                <li><button class="btn-p" type="button">Усі</button></li>
-                <li><button class="btn-p" type="button">Веб-сайти</button></li>
-                <li><button class="btn-p" type="button">Додатки</button></li>
-                <li><button class="btn-p" type="button">Дизайн</button></li>
-                <li><button class="btn-p" type="button">Маркетинг</button></li>
+            <ul class="btn-list">
+                <li class="btn-item"><button class="btn-p" type="button">Усі</button></li>
+                <li class="btn-item"><button class="btn-p" type="button">Веб-сайти</button></li>
+                <li class="btn-item"><button class="btn-p" type="button">Додатки</button></li>
+                <li class="btn-item"><button class="btn-p" type="button">Дизайн</button></li>
+                <li class="btn-item"><button class="btn-p" type="button">Маркетинг</button></li>
             </ul>
         </section>
-        <section>
+        <section class="section-variation">
             <h2 hidden class="section-title">Приклади</h2>
-            <ul>
-                <li>
+            <ul class="variation-list">
+                <li class="variation-item">
                     <img src="./images/portfolio/img-8.jpg" alt="Технокряк" class="img" width="370" height="294">
                     <h3 class="list-title-p">Технокряк</h3>
                     <p class="list-text-p">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-9.jpg" alt="Постер New Orlean vs Golden Star" class="img" width="370" height="294">
                     <h3 class="list-title-p">Постер New Orlean vs Golden Star</h3>
                     <p class="list-text-p">Дизайн</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-10.jpg" alt="Ресторан Seafood" class="img" width="370" height="294">
                     <h3 class="list-title-p">Ресторан Seafood</h3>
                     <p class="list-text-p">Додаток</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-11.jpg" alt="Проєкт Prime" class="img" width="370" height="294">
                     <h3 class="list-title-p">Проєкт Prime</h3>
                     <p class="list-text-p">Маркетинг</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-12.jpg" alt="Проєкт Boxes" class="img" width="370" height="294">
                     <h3 class="list-title-p">Проєкт Boxes</h3>
                     <p class="list-text-p">Додаток</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-13.jpg" alt="UI Designer" class="img" width="370" height="294">
                     <h3 class="list-title-p">Inspiration has no Borders</h3>
                     <p class="list-text-p">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-14.jpg" alt="Видання Limited Edition" class="img" width="370" height="294">
                     <h3 class="list-title-p">Видання Limited Edition</h3>
                     <p class="list-text-p">Дизайн</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-15.jpg" alt="Проєкт LAB" class="img" width="370" height="294">
                     <h3 class="list-title-p">Проєкт LAB</h3>
                     <p class="list-text-p">Маркетинг</p>
                 </li>
-                <li>
+                <li class="variation-item">
                     <img src="./images/portfolio/img-16.jpg" alt="UI Designer" class="img" width="370" height="294">
                     <h3 class="list-title-p">Growing Business</h3>
                     <p class="list-text-p">Додаток</p>
