--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
             </a>
 
             <ul class="list">
-                <li class="list-item"><a class="link current" href="./index.html">Студія</a></li>
-                <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+                <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
+                <li class="list-item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
                 <li class="list-item"><a class="link" href="">Контакти</a></li>
             </ul>
         </nav>
