--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <!--Styles.css-->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -48,7 +49,7 @@
 
             <section class="features section">
                 <div class="container">
-                    <h2 hidden class="features-title">Особливості</h2>
+                    <h2 class="visually-hidden">Особливості</h2>
                     <ul class="list features-list">
                         <li class="list-item">
                             <h3 class="item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
