--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <!--Styles.css-->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -40,80 +41,93 @@
 
     <main class="main-p">
         <section class="section">
-            <section class="section-btn">
-                <div class="container">
-                    <h2 hidden class="section-title">Розділи</h2>
+            <div class="container">
+                <section class="section-btn">
+                    <h2 class="visually-hidden">Розділи</h2>
                     <ul class="btn-list list">
-                        <li class="btn-item"><button class="btn-p first-btn" type="button">Усі</button></li>
+                        <li class="btn-item"><button class="btn-p btn-current" type="button">Усі</button></li>
                         <li class="btn-item"><button class="btn-p" type="button">Веб-сайти</button></li>
                         <li class="btn-item"><button class="btn-p" type="button">Додатки</button></li>
                         <li class="btn-item"><button class="btn-p" type="button">Дизайн</button></li>
-                        <li class="btn-item"><button class="btn-p last-btn" type="button">Маркетинг</button></li>
+                        <li class="btn-item"><button class="btn-p" type="button">Маркетинг</button></li>
                     </ul>
-                </div>
-            </section>
-            <section class="section-variation">
-                <div class="container">
                     <h2 hidden class="section-title">Приклади</h2>
                     <ul class="variation-list list">
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-8.jpg" alt="Технокряк" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Технокряк</h3>
-                            <p class="list-text-p">Веб-сайт</p>
+                            <img src="./images/portfolio/img-8.jpg" alt="Технокряк" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Технокряк</h3>
+                                <p class="list-text-p">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-9.jpg" alt="Постер New Orlean vs Golden Star" class="img" width="370"
+                            <img src="./images/portfolio/img-9.jpg" alt="Постер New Orlean vs Golden Star" class="img img-p" width="370"
                                 height="294">
-                            <h3 class="list-title-p">Постер New Orlean vs Golden Star</h3>
-                            <p class="list-text-p">Дизайн</p>
+                            <div class="border">
+                                <h3 class="list-title-p">Постер New Orlean vs Golden Star</h3>
+                                <p class="list-text-p">Дизайн</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-10.jpg" alt="Ресторан Seafood" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Ресторан Seafood</h3>
-                            <p class="list-text-p">Додаток</p>
+                            <img src="./images/portfolio/img-10.jpg" alt="Ресторан Seafood" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Ресторан Seafood</h3>
+                                <p class="list-text-p">Додаток</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-11.jpg" alt="Проєкт Prime" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Проєкт Prime</h3>
-                            <p class="list-text-p">Маркетинг</p>
+                            <img src="./images/portfolio/img-11.jpg" alt="Проєкт Prime" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Проєкт Prime</h3>
+                                <p class="list-text-p">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-12.jpg" alt="Проєкт Boxes" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Проєкт Boxes</h3>
-                            <p class="list-text-p">Додаток</p>
+                            <img src="./images/portfolio/img-12.jpg" alt="Проєкт Boxes" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Проєкт Boxes</h3>
+                                <p class="list-text-p">Додаток</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-13.jpg" alt="UI Designer" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Inspiration has no Borders</h3>
-                            <p class="list-text-p">Веб-сайт</p>
+                            <img src="./images/portfolio/img-13.jpg" alt="UI Designer" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Inspiration has no Borders</h3>
+                                <p class="list-text-p">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-14.jpg" alt="Видання Limited Edition" class="img" width="370"
-                                height="294">
-                            <h3 class="list-title-p">Видання Limited Edition</h3>
-                            <p class="list-text-p">Дизайн</p>
+                            <img src="./images/portfolio/img-14.jpg" alt="Видання Limited Edition" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Видання Limited Edition</h3>
+                                <p class="list-text-p">Дизайн</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-15.jpg" alt="Проєкт LAB" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Проєкт LAB</h3>
-                            <p class="list-text-p">Маркетинг</p>
+                            <img src="./images/portfolio/img-15.jpg" alt="Проєкт LAB" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Проєкт LAB</h3>
+                                <p class="list-text-p">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="variation-item">
-                            <img src="./images/portfolio/img-16.jpg" alt="UI Designer" class="img" width="370" height="294">
-                            <h3 class="list-title-p">Growing Business</h3>
-                            <p class="list-text-p">Додаток</p>
+                            <img src="./images/portfolio/img-16.jpg" alt="UI Designer" class="img img-p" width="370" height="294">
+                            <div class="border">
+                                <h3 class="list-title-p">Growing Business</h3>
+                                <p class="list-text-p">Додаток</p>
+                            </div>
                         </li>
                     </ul>
-                </div>
-            </section>
-        </section>
-    </main>
+                </section>
+
+            </div>
+                </main>
 
     <footer class="footer">
         <div class="container">
             <a class="logo" href="./index.html">Web<span class="f-studio">Studio</span></a>
             <address class="contacts-address">
-                <ul class="list">
+                <ul class="list footer-list">
                     <li class="list-item"><a class="link address" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li class="list-item"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="list-item"><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
