--- a/index.html
+++ b/index.html
@@ -37,41 +37,37 @@
     </header>
 
     <main class="main">
-
-        <section class="hero">
-            <div class="container hero-container">
-                <div class="hero-group">
-                    <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                    <button class="btn main-btn" type="button">Замовити послугу</button>
-                </div>
+        <section class="hero section">
+            <div class="container">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <button class="btn main-btn" type="button">Замовити послугу</button>
             </div>
         </section>
-
-            <section class="features section">
+        <section class="features section">
                 <div class="container">
                     <h2 class="visually-hidden">Особливості</h2>
                     <ul class="list features-list">
-                        <li class="list-item">
+                        <li class="list-item features-item">
                             <h3 class="item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="item-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
-                        <li class="list-item">
+                        <li class="list-item features-item">
                             <h3 class="item-title">ПУНКТУАЛЬНІСТЬ</h3>
                             <p class="item-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                         </li>
-                        <li class="list-item">
+                        <li class="list-item features-item">
                             <h3 class="item-title">ПЛАНУВАННЯ</h3>
                             <p class="item-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
-                        <li class="list-item">
+                        <li class="list-item features-item">
                             <h3 class="item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                             <p class="item-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
                     </ul>
                 </div>
             </section>
-            
-            <section class="work-process section">
+
+            <section class="work-process section" style="padding-top: 0px;">
                 <div class="container">
                     <h2 class="title">
                         Чим ми займаємося
